--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ color:red;
 <p style="color:orange; background-color:black">I earned my SSC memo from St.Ann's high school,Bhel and my inter in Narayana Junior College, Chandanagar.</p>
 </details>
 </section>
-<img src="E:\Karthik\Karthik.jpeg" alt="Karthik" width="400" height="400">
+<img src="Karthik.jpeg" alt="Karthik" width="400" height="400">
 
 </body>
 </html>
