--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ color:red;
 </style>
 </head>
 <body>
-<h1 style="color:green">Styled by Karthik</h1>
-<p style="color:purple">This is purple coloured paragraph.</p>
+<h1 style="color:green">Karthik Cruzz</h1>
+<p style="color:purple">Hi There...</p>
 
-<p>This is violet coloured paragrapgh.</p>
+<p>Stay Home Stay Safe.</p>
 <section>
 <h2>Cities visited</h2>
 <ul>
@@ -31,18 +31,18 @@ color:red;
 <section>
 <h3>Life</h3>
 <p style="color:black">Progress in school (100%)<progress value="100" max="100">100%</progress></p>
-<p style="color:black">Progress in B.tech (25%)<progress value="25" max="100">25%</progress></p>
+<p style="color:black">Progress in B.tech (50%)<progress value="50" max="100">50%</progress></p>
 </section>
 <section>
 <h3>About myself</h3>
 <details>
 <summary>My childhood</summary>
 
-<p style="color:yellow; background-color:black">I was born in Andhra Pradesh and raised in a Hyderabad,India.</p>
+<p style="color:yellow; background-color:black">I was born in Andhra Pradesh and raised in Hyderabad,India.</p>
 </details>
 <details>
 <summary>My Schooling</summary>
-<p style="color:orange; background-color:black">I earned my SSC memo from St.Ann's high school,Bhel and my inter in Narayana Junior College, Chandanagar.</p>
+<p style="color:orange; background-color:black">I earned my SSC memo from St.Ann's high school and my inter in Narayana Junior College.</p>
 </details>
 </section>
 
