--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ color:red;
 </details>
 <details>
 <summary>My Schooling</summary>
-<p style="color:orange; background-color:black">I earned my SSC memo from St.Ann's high school and my inter in Narayana Junior College.</p>
+<p style="color:orange; background-color:black">I earned my SSC memo from St.Ann's high school and my inter from Narayana Junior College.</p>
 </details>
 </section>
 
