--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Using the style Attribute</title>
+<title>Karthik's Personal Site</title>
 <style>
 p{
 color:red;
