--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="cloud.png" alt="cloud-img">
         <h1><em>I'm Karthik.</em></h1>
         <h2 style="font-family: 'Indie Flower', cursive">A programmer.</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-        <img src="images/mountain.png" alt="mountain-img">
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+        <img src="mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
             <div class="profile">
@@ -29,7 +29,7 @@
             <div class="skills">
               <h2 style="margin-top: 30px;">What can I do.</h2>
               <div class="skill-row">
-                <img class="page-pic" style="float: left; margin-right: 30px;" src="images/computer.png" alt="computer-pic">
+                <img class="page-pic" style="float: left; margin-right: 30px;" src="computer.png" alt="computer-pic">
                 <h3>Develop what you need.</h3>
                 <p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
               </div>
