--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="middle-container">
             <div class="profile">
-            <img class="page-pic" src="https://cdn-icons.flaticon.com/png/512/3006/premium/3006899.png?token=exp=1647096092~hmac=9042174161e902045845bffecd53f027" alt="face-pic">
+            <img class="page-pic" src="face-pic.png" alt="face-pic">
               <h2>Hello.</h2>
               <p style="width: 30%;margin: 15px auto;">I'm a web designer / developer based in Hyderabad, India. I have a passion for web design and love to create for web and mobile devices.</p>
             </div>
